[package]
name = "rust-constant-time-comp-bench"
version = "0.1.0"
authors = ["Mikhail Pak <mikhail.pak@tum.de>"]
license = "MIT"
description = "Benches of different constant-time comparison implementations in Rust"
readme = "README.md"
publish = false

[dependencies]
chrono = "^0.3.1"
constant_time_eq = "^0.1.2"
